# django-react-typescript-template

./: .env.example  .example.env  README.md  manage.py  pyproject.toml  shell.nix
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py
backend/: settings.py  urls.py
frontend/: package.json
frontend/src/: index.tsx
frontend/src/app/: auth.ts  context.ts  index.tsx  useUser.ts  utils.ts
frontend/src/app/components/NavBar/: Logo.tsx  Nav.tsx
frontend/src/app/pages/HomePage/: index.tsx
frontend/src/app/pages/LoginPage/: index.tsx
frontend/src/app/pages/LoginPage/components/: H1.ts
frontend/src/styles/: global-styles.ts
